fix align

--- a/src/modules/megamenu/index.css
+++ b/src/modules/megamenu/index.css
@@ -53,6 +53,10 @@
   @extend .u-padding-left-xl;
 }
 
+.Megamenu-item:first-child > a {
+  @extend .u-padding-left-none;
+}
+
 .Megamenu-item > a:focus {
   @extend .u-backround-none;
 }
